--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Stag Swap Meet</title>
 <style>
 .item1 { grid-area: one; overflow: hidden; }
 .item2 { grid-area: two; overflow: hidden; }
@@ -23,7 +24,6 @@
 overflow: hidden;
 width: 1025px;
 height: 750px;
-position: center;
 cursor: url(https://i.gyazo.com/757db8e70b8186cf3666cd1e6fc35330.png),auto;
 }
 .grid-container > div {
@@ -37,7 +37,6 @@ background-image: none;
 overflow-x: hidden;
 overflow-y: hidden;
 background-position: center;
-position: center;
 left: 50%;
 width: 100% !important;
 height: 100% !important;
@@ -49,7 +48,6 @@ background-repeat: no-repeat;
 }
 * {
 overflow: hidden !important;
-scrollbar-width: 0;
 }
 body{
 background-image: url("https://cdn.discordapp.com/attachments/477593017033949205/912327596627333181/SSM_BOARD.png");
@@ -68,15 +66,15 @@ background-repeat: no-repeat;
 
 <div class="container">
 <div class="grid-container">
-  <div class="item1"><img src="https://i.gyazo.com/9de11fa68de3250bed43271f4cf9bada.png" style='height: 100%; width: 100%; object-fit: contain; background:transparent;' ></div>
-  <div class="item2"><img src="https://i.gyazo.com/9de11fa68de3250bed43271f4cf9bada.png" style='height: 100%; width: 100%; object-fit: contain; background:transparent;'></div>
-  <div class="item3"><img src="https://i.gyazo.com/9de11fa68de3250bed43271f4cf9bada.png" style='height: 100%; width: 100%; object-fit: contain; background:transparent;'></div>  
-  <div class="item4"><img src="https://i.gyazo.com/9de11fa68de3250bed43271f4cf9bada.png" style='height: 100%; width: 100%; object-fit: contain; background:transparent;'></div>
-  <div class="item5"><img src="https://i.gyazo.com/9de11fa68de3250bed43271f4cf9bada.png" style='height: 100%; width: 100%; object-fit: contain; background:transparent;'></div>
-  <div class="item6"><img src="https://i.gyazo.com/9de11fa68de3250bed43271f4cf9bada.png" style='height: 100%; width: 100%; object-fit: contain; background:transparent;'></div>
-  <div class="item7"><img src="https://i.gyazo.com/9de11fa68de3250bed43271f4cf9bada.png" style='height: 100%; width: 100%; object-fit: contain; background:transparent;'></div>
-  <div class="item8"><img src="https://i.gyazo.com/9de11fa68de3250bed43271f4cf9bada.png" style='height: 100%; width: 100%; object-fit: contain; background:transparent;'></div>  
-  <div class="item9"><img src="https://i.gyazo.com/9de11fa68de3250bed43271f4cf9bada.png" style='height: 100%; width: 100%; object-fit: contain; background:transparent;'></div>
+  <div class="item1"><img src="https://i.gyazo.com/9de11fa68de3250bed43271f4cf9bada.png" style='height: 100%; width: 100%; object-fit: contain; background:transparent;' alt="img"></div>
+  <div class="item2"><img src="https://i.gyazo.com/9de11fa68de3250bed43271f4cf9bada.png" style='height: 100%; width: 100%; object-fit: contain; background:transparent;' alt="img"></div>
+  <div class="item3"><img src="https://i.gyazo.com/9de11fa68de3250bed43271f4cf9bada.png" style='height: 100%; width: 100%; object-fit: contain; background:transparent;' alt="img"></div>  
+  <div class="item4"><img src="https://i.gyazo.com/9de11fa68de3250bed43271f4cf9bada.png" style='height: 100%; width: 100%; object-fit: contain; background:transparent;' alt="img"></div>
+  <div class="item5"><img src="https://i.gyazo.com/9de11fa68de3250bed43271f4cf9bada.png" style='height: 100%; width: 100%; object-fit: contain; background:transparent;' alt="img"></div>
+  <div class="item6"><img src="https://i.gyazo.com/9de11fa68de3250bed43271f4cf9bada.png" style='height: 100%; width: 100%; object-fit: contain; background:transparent;' alt="img"></div>
+  <div class="item7"><img src="https://i.gyazo.com/9de11fa68de3250bed43271f4cf9bada.png" style='height: 100%; width: 100%; object-fit: contain; background:transparent;' alt="img"></div>
+  <div class="item8"><img src="https://i.gyazo.com/9de11fa68de3250bed43271f4cf9bada.png" style='height: 100%; width: 100%; object-fit: contain; background:transparent;' alt="img"></div>  
+  <div class="item9"><img src="https://i.gyazo.com/9de11fa68de3250bed43271f4cf9bada.png" style='height: 100%; width: 100%; object-fit: contain; background:transparent;' alt="img"></div>
 </div>
 </div>
 </body>
